Organized file structure and refactored main activity to utlize new service class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TrackTeamActivity" />
-        <activity android:name=".ViewTrackedTeamsActivity" />
+        <activity android:name=".activities.TrackTeamActivity" />
+        <activity android:name=".activities.ViewTrackedTeamsActivity" />
 
     </application>
 
